src/test/ui/edition-keywords-2015-2018-expansion.stderr
error: expected identifier, found reserved keyword `async`
  --> $DIR/edition-keywords-2015-2018-expansion.rs:20:5
   |
LL |     produces_async! {} //~ ERROR expected identifier, found reserved keyword
   |     ^^^^^^^^^^^^^^^^^^ expected identifier, found reserved keyword
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

